fixed SP processing for mysql_list_fields() command (BUG#6814)

sql/sql_parse.cc:
  SP pre/post processing moved to functions and used for mysql_list_fields command execution.
tests/mysql_client_test.c:
  test of mysql_list_fields call for VIEW with SP function